--- a/services/hello-html/index.html
+++ b/services/hello-html/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>gecko</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body onload="getNote()">
